--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,13 @@
 "version": "1.0",
 "description": "This is our QUICK WikiPedia SEARCH Extension",
 "icons":{
-	"128": "128icon.png",
-	"48": "48icon.png",
-	"16": "16icon.png"
+	//will be added
+	//"128": "128icon.png",     
+	//"48": "48icon.png",
+	//"16": "16icon.png"
 },
 "browser_action": {
-		"default_icon": "16icon.png"
+		//"default_icon": "16icon.png"
 },
 
 "background":{
