--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,40 @@
-//Bing Serch 
-
 {
-	"manifest_version": 2,
-	"name": "Free - Bing Search Extension",
-	"version": "1.0",
-	"description": "This is our bing search extension",
-	"icons":{
-		"128": "128icon.png",
-		"48": "48icon.png",
-		"16": "16icon.png"
-	},
-	"browser_action": {
-		"default_icon": "16icon.png"
-	},
-	"background":{
-		"scripts": ["eventPage.js"],
-		"persistent": true
-	},
-	"permissions":[
-		"tabs",
-		"contextMenus"
-	]
+"manifest_version": 2,
+"name": "Free - Search Extension by right click or Key Press",
+"version": "1.0",
+"description": "This is our QUICK SEARCH Extension",
+"content_scripts": [
+    {
+    "matches": [
+        "http://*/*",
+        "https://*/*"
+        ],
+    "js": ["content.js"]
+    }
+],
+"icons":{
+	"128": "128icon.png",
+	"48": "48icon.png",
+	"16": "16icon.png"
+},
+"browser_action": {
+		"default_icon": "16icon.png",
+		"default_popup": "popup.html"
+},
+
+"background":{
+	"scripts": ["eventPageY.js",
+	"content.js"
+	],
+	"persistent": true
+},
+"permissions":[
+	"activeTab",
+	"contextMenus"
+]
 }
+
+
+
+
+
